# sop-agent

./: .gitignore  MEOWWORK_DESIGN.md  README.md  ROADMAP.md  machine_unlearning_survey.md  pyproject.toml
sops/: code-survey.yaml  mcp_test.yaml  research.yaml
src/sopagent/: __init__.py  cli.py  config.py  prompt_builder.py  server.py
src/sopagent/harness/: __init__.py  approval.py  artifacts.py  autonomous.py  context.py  context_window.py  engine.py  events.py  interactive.py  markdown_render.py  session_store.py  state.py  tracer.py  transitions.py  tui.py  validator.py
src/sopagent/llm/: __init__.py  anthropic_provider.py  base.py  registry.py  (+2 more)
tests/: conftest.py  test_anthropic_provider.py  test_approval.py  test_autonomous.py  test_cli_traces.py  test_config.py  test_context_window.py  test_engine.py  test_interactive.py  test_mcp.py  test_meowwork.py  test_meowwork_orchestrator.py  test_meowwork_pause.py  test_meowwork_validator.py  test_server.py  test_server_artifacts.py  test_server_chat.py  test_server_meowwork.py  test_session_store.py  test_skills.py  test_sop_loader.py  test_stdlib_tools.py  test_stream.py  test_task_tool.py  test_tracer_observability.py  test_transitions.py  test_tui_framework.py  test_validator.py
web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AgentSidebar.tsx  ChatStream.tsx  ExecutorPanel.tsx  PlannerPanel.tsx  ReviewerPanel.tsx  StatusBar.tsx  TaskInput.tsx  ValidatorPanel.tsx
web/lib/: api.ts  store.ts  types.ts  ws.ts
(+43 files in other folders)
